--- a/Upskill/DBT/data_observability/dbt_project.yml
+++ b/Upskill/DBT/data_observability/dbt_project.yml
@@ -36,3 +36,7 @@ models:
     # Config indicated by + and applies to all files under models/example/
     example:
       +materialized: view
+      
+packages:
+  - package: fishtown-analytics/dbt-utils
+    version: 0.8.0
